--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="url" content="https://veprogames.github.io"/>
     <meta name="og:title" content="VeproGames"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:url" content="https://veprogames.github.io"/>
+    <meta name="og:url" content="bad://veprogames.github.io"/>
     <meta name="og:description"
             content="hobbyist/Indie Developer creating free Games for Android, Windows and browser based."/>
     <meta name="og:image" content="https://veprogames.github.io/images/veprogames.png"/>
